<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    
    <string name="app_name">Booking Meeting Rooms</string>
    <string name="title_map">Location in Map</string>
    <string name="action_settings">Settings</string>
    <string name="room_address">(Sala Roja) Torrelaguna 77 Edificio A</string>
    <string name="date">De: 13:00 a 14:30</string>
    <string name="time">El: Hoy</string>
    <string name="reservar_sala">Reservar sala</string>
    <string name="lector_qr">Lector QR</string>
    <string name="lector_nfc">Lector NFC</string>
    <string name="upcoming">Upcoming</string>
    <string name="scan_qr">Scan QR</string>
    <string name="title_activity_take_picture">TakePicture</string>
    <string name="title_activity_ScanQR">ScanQR</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="re_scan_qr">ReScan QR</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="text_room_date_time">Room \'Sapphire Room\' reserved At 18:00 the 10 of January 2014</string>
    <string name="text_room_address">Avenida de la libertad, 23. 3º Piso</string>
    <string name="text_capacity">Capacity: 2 seats</string>
    <string name="text_wi_fi">Wi-Fi</string>
    <string name="text_booking_date">Booking Date</string>
    <string name="text_booking_time">Booking Time</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_dash">\@</string>
    <string name="text_arroba"> - </string>
    <string name="text_board_meeting">Board Meeting</string>
    <string name="text_15_30">15:30</string>
    <string name="text_sapphire_room">Sapphire Room</string>

</resources>