<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="@drawable/style_main_listview"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/layo_main_list_item_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/global_text_textview_light"
        android:textStyle="bold"
        android:text="@string/text_tomorrow" />


    <TextView
        android:id="@+id/layo_main_list_item_tv_date_sep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/layo_main_list_item_tv_date"
        android:layout_marginTop="5dp"
        android:textColor="@color/global_text_textview_light"
        android:textStyle="bold"
        android:text="@string/text_dash" />

    <TextView
        android:id="@+id/layo_main_list_item_tv_subjet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/layo_main_list_item_tv_date_sep"
        android:layout_marginTop="5dp"
        android:textColor="@color/global_text_textview_light"
        android:textStyle="bold"
        android:text="@string/text_board_meeting" />
       
    <TextView
        android:id="@+id/layo_main_list_item_tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layo_main_list_item_tv_date"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/global_text_textview_light"
        android:textStyle="bold"
        android:text="@string/text_15_30" />

    <TextView
        android:id="@+id/layo_main_list_item_tv_time_sep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layo_main_list_item_tv_date"
        android:layout_toRightOf="@+id/layo_main_list_item_tv_time"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/global_text_textview_light"
        android:textStyle="bold"
        android:text="@string/text_dash" />

    <TextView
        android:id="@+id/layo_main_list_item_tv_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/layo_main_list_item_tv_time_sep"
        android:layout_alignBottom="@+id/layo_main_list_item_tv_time_sep"
        android:layout_toRightOf="@+id/layo_main_list_item_tv_time_sep"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/global_text_textview_light"
        android:textStyle="bold"
        android:text="@string/text_sapphire_room" />

    <ImageView
        android:id="@+id/layo_main_list_item_iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/layo_main_list_item_tv_room"
        android:layout_marginRight="10dp"
        android:src="@drawable/right_arrow_blue" />

</RelativeLayout>