<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <EditText
        android:id="@+id/layo_login_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_top_rounded"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="date"
        android:paddingLeft="15dp"
        android:textColor="@color/global_text_edittext"
        android:textStyle="bold" /> 

    <EditText
        android:id="@+id/layo_login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layo_login_et_user"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/style_bottom_rounded"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/global_text_edittext"
        android:textStyle="bold" />

    <Button
        android:id="@+id/layo_login_bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layo_login_et_password"
        android:layout_margin="10dp"
        android:background="@drawable/style_search_button"
        android:drawablePadding="5dp"
        android:text="@string/log_in"
        android:textColor="@color/global_text_botton"
        android:textStyle="bold" />

</RelativeLayout>