<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layo_room_detail_ll_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/global_background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/layo_room_detail_tv_room_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:maxLines="5"
                android:text="@string/text_room_date_time"
                android:textColor="@color/global_text_textview_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/layo_room_detail_tv_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.70"
                    android:text="@string/text_room_address"
                    android:textColor="@color/global_text_textview_dark"
                    android:textSize="12sp" />

                <ImageButton
                    android:id="@+id/layo_room_detail_ib_go_to_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="right"                  
                    android:paddingBottom="5dp"
                    android:background="@drawable/style_imagebutton"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/layo_room_detail_tv_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layo_room_detail_ll_header"
            android:layout_margin="10dp"
            android:background="@drawable/style_rounded_textview"
            android:padding="10dp"
            android:text="@string/text_capacity"
            android:textColor="@color/global_text_textview_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layo_room_detail_ll_room_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layo_room_detail_tv_capacity"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/style_rounded_corners"
            android:divider="@color/global_listview_divisor"
            android:dividerHeight="1sp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layo_room_detail_ll_fotter"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/layo_room_detail_ll_room_features"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Space
                android:id="@+id/layo_room_detail_space_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50" >
            </Space>

            <Button
                android:id="@+id/layo_room_detail_bt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:background="@drawable/style_search_button"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_menu_delete"
                android:text="@string/delete"
                android:textColor="@color/global_text_botton"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>